[package]
name = "crabyknife"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.37.5"
uuid = { version = "1", features = ["v4"] }
socket2 = { version = "0.5", features = ["all" ]}
tokio = { version = "1" }
